--- a/app/src/main/res/layout/activity_eplan_show.xml
+++ b/app/src/main/res/layout/activity_eplan_show.xml
@@ -107,8 +107,7 @@
                     android:id="@+id/image1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    app:srcCompat="@drawable/scheme_1" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -121,8 +120,7 @@
                     android:id="@+id/image2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    app:srcCompat="@drawable/scheme_2" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -135,8 +133,7 @@
                     android:id="@+id/image3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_3" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -149,8 +146,7 @@
                     android:id="@+id/image4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_4" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -163,8 +159,7 @@
                     android:id="@+id/image5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_5" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -177,8 +172,7 @@
                     android:id="@+id/image6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_6" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -191,8 +185,7 @@
                     android:id="@+id/image7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_7" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -205,8 +198,7 @@
                     android:id="@+id/image8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_8" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -219,8 +211,7 @@
                     android:id="@+id/image9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_9" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -233,8 +224,7 @@
                     android:id="@+id/image10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_10" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -247,8 +237,7 @@
                     android:id="@+id/image11"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_11" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -261,8 +250,7 @@
                     android:id="@+id/image12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_12" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -275,8 +263,7 @@
                     android:id="@+id/image13"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_13" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -289,8 +276,7 @@
                     android:id="@+id/image14"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_14" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -303,8 +289,7 @@
                     android:id="@+id/image15"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_15" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -317,8 +302,7 @@
                     android:id="@+id/image16"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/scheme_16" />
+                    android:adjustViewBounds="true" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -327,130 +311,123 @@
                     android:background="@color/grr"
                     android:orientation="horizontal" />
 
+                <ImageView
+                    android:id="@+id/image17"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/image3"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:scaleType="fitCenter" />-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/image4"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:scaleType="fitCenter" />-->
+                <ImageView
+                    android:id="@+id/image18"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/image5"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:scaleType="fitCenter" />-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/image6"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:scaleType="fitCenter" />-->
+                <ImageView
+                    android:id="@+id/image19"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/image7"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:scaleType="fitCenter" />-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/image8"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:scaleType="fitCenter" />-->
+                <ImageView
+                    android:id="@+id/image20"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
 
-                <!--                <ImageView-->
-                <!--                    android:id="@+id/image9"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:scaleType="fitCenter" />-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
 
+                <ImageView
+                    android:id="@+id/image21"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
+
+                <ImageView
+                    android:id="@+id/image22"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
+
+                <ImageView
+                    android:id="@+id/image23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
+
+                <ImageView
+                    android:id="@+id/image24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
+
+                <ImageView
+                    android:id="@+id/image25"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:background="@color/grr"
+                    android:orientation="horizontal" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
 </LinearLayout>
-
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image1"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:scaleType="fitCenter" />-->
-
-
-    <!--&lt;!&ndash;                &lt;!&ndash; Пример изображений &ndash;&gt;&ndash;&gt;-->
-    <!--&lt;!&ndash;                <ImageView&ndash;&gt;-->
-    <!--&lt;!&ndash;                    android:id="@+id/image1"&ndash;&gt;-->
-    <!--&lt;!&ndash;                    android:layout_width="match_parent"&ndash;&gt;-->
-    <!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;                    android:src="@drawable/scheme_1"&ndash;&gt;-->
-    <!--&lt;!&ndash;                    android:adjustViewBounds="true" />&ndash;&gt;-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image2"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_2"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image3"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_3"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image4"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_4"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image5"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_5"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image6"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_6"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image7"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_7"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image8"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_8"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/image9"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/scheme_9"-->
-    <!--                    android:adjustViewBounds="true" />-->
-
-    <!--                &lt;!&ndash; Добавьте больше ImageView для других изображений &ndash;&gt;-->
-
-    <!--            </LinearLayout>-->
-    <!--        </ScrollView>-->
-
-    <!--    </LinearLayout>-->
-    <!--</LinearLayout>-->
