--- a/app/src/main/res/layout/fragment_save_agv.xml
+++ b/app/src/main/res/layout/fragment_save_agv.xml
@@ -27,16 +27,15 @@
         android:hint="Серийный номер"
         android:paddingStart="5dp" />
 
-    <EditText
-        android:id="@+id/etVersionFW"
+    <Spinner
+        android:id="@+id/spinnerVersionFW"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
-        android:background="@color/white"
-        android:hint="Версия FW"
-        android:paddingStart="5dp" />
+        android:background="@color/green_light"
+    />
 
     <Spinner
         android:id="@+id/spinnerModelAgv"
@@ -45,7 +44,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
-        android:background="@color/white" />
+        android:background="@color/green_light" />
 
 
     <EditText
